--- a/ci/Plugin.nuspec
+++ b/ci/Plugin.nuspec
@@ -3,7 +3,7 @@
    <metadata minClientVersion="2.8.1">
        <id>Xam.Plugin.DeviceInfo</id>
        <version>$version$</version>
-       <title>Device Info Plugin for Xamarin and Windows</title>
+       <title>Device Information Plugin for Xamarin and Windows</title>
        <authors>James Montemagno</authors>
        <owners>James Montemagno</owners>
        <licenseUrl>https://github.com/jamesmontemagno/DeviceInfoPlugin/blob/master/LICENSE</licenseUrl>
@@ -28,21 +28,21 @@
    <files>
    <file src="readme.txt" target="readme.txt" />
 <!--Core-->
-     <file src="..\src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.dll" />
-     <file src="..\src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.xml" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.xml" />
-     <file src="..\src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.pdb" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.pdb" />
-     <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.Abstractions.dll" />
-     <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.Abstractions.xml" />
-     <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.Abstractions.pdb" />
+     <file src="src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.dll" />
+     <file src="src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.xml" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.xml" />
+     <file src="src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.pdb" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.pdb" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.Abstractions.dll" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.Abstractions.xml" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.Abstractions.pdb" />
 
 
      <!--Win Phone Silverlight-->
-     <file src="..\src\DeviceInfo.Plugin.WindowsPhone8\bin\Release\Plugin.DeviceInfo.dll" target="lib\wp8\Plugin.DeviceInfo.dll" />
-     <file src="..\src\DeviceInfo.Plugin.WindowsPhone8\bin\Release\Plugin.DeviceInfo.xml" target="lib\wp8\Plugin.DeviceInfo.xml" />
-     <file src="..\src\DeviceInfo.Plugin.WindowsPhone8\bin\Release\Plugin.DeviceInfo.pdb" target="lib\wp8\Plugin.DeviceInfo.pdb" />
-     <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\wp8\Plugin.DeviceInfo.Abstractions.dll" />
-     <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\wp8\Plugin.DeviceInfo.Abstractions.xml" />
-     <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\wp8\Plugin.DeviceInfo.Abstractions.pdb" />
+     <file src="src\DeviceInfo.Plugin.WindowsPhone8\bin\Release\Plugin.DeviceInfo.dll" target="lib\wp8\Plugin.DeviceInfo.dll" />
+     <file src="src\DeviceInfo.Plugin.WindowsPhone8\bin\Release\Plugin.DeviceInfo.xml" target="lib\wp8\Plugin.DeviceInfo.xml" />
+     <file src="src\DeviceInfo.Plugin.WindowsPhone8\bin\Release\Plugin.DeviceInfo.pdb" target="lib\wp8\Plugin.DeviceInfo.pdb" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\wp8\Plugin.DeviceInfo.Abstractions.dll" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\wp8\Plugin.DeviceInfo.Abstractions.xml" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\wp8\Plugin.DeviceInfo.Abstractions.pdb" />
 
 
      <!--Win Phone 81-->
@@ -55,41 +55,41 @@
 
 
      <!--WinStore-->
-     <file src="..\src\DeviceInfo.Plugin.WindowsStore\bin\Release\Plugin.DeviceInfo.dll" target="lib\win8\Plugin.DeviceInfo.dll" />
-     <file src="..\src\DeviceInfo.Plugin.WindowsStore\bin\Release\Plugin.DeviceInfo.xml" target="lib\win8\Plugin.DeviceInfo.xml" />
-     <file src="..\src\DeviceInfo.Plugin.WindowsStore\bin\Release\Plugin.DeviceInfo.pdb" target="lib\win8\Plugin.DeviceInfo.pdb" />
-     <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\win8\Plugin.DeviceInfo.Abstractions.dll" />
-     <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\win8\Plugin.DeviceInfo.Abstractions.xml" />
-     <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\win8\Plugin.DeviceInfo.Abstractions.pdb" />
+     <file src="src\DeviceInfo.Plugin.WindowsStore\bin\Release\Plugin.DeviceInfo.dll" target="lib\win8\Plugin.DeviceInfo.dll" />
+     <file src="src\DeviceInfo.Plugin.WindowsStore\bin\Release\Plugin.DeviceInfo.xml" target="lib\win8\Plugin.DeviceInfo.xml" />
+     <file src="src\DeviceInfo.Plugin.WindowsStore\bin\Release\Plugin.DeviceInfo.pdb" target="lib\win8\Plugin.DeviceInfo.pdb" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\win8\Plugin.DeviceInfo.Abstractions.dll" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\win8\Plugin.DeviceInfo.Abstractions.xml" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\win8\Plugin.DeviceInfo.Abstractions.pdb" />
 
 
      <!--Xamarin.Android-->
-     <file src="..\src\DeviceInfo.Plugin.Android\bin\Release\Plugin.DeviceInfo.dll" target="lib\MonoAndroid10\Plugin.DeviceInfo.dll" />
-     <file src="..\src\DeviceInfo.Plugin.Android\bin\Release\Plugin.DeviceInfo.xml" target="lib\MonoAndroid10\Plugin.DeviceInfo.xml" />
-     <file src="..\src\DeviceInfo.Plugin.Android\bin\Release\Plugin.DeviceInfo.pdb" target="lib\MonoAndroid10\Plugin.DeviceInfo.pdb" />
-     <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\MonoAndroid10\Plugin.DeviceInfo.Abstractions.dll" />
-     <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\MonoAndroid10\Plugin.DeviceInfo.Abstractions.xml" />
-     <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\MonoAndroid10\Plugin.DeviceInfo.Abstractions.pdb" />
+     <file src="src\DeviceInfo.Plugin.Android\bin\Release\Plugin.DeviceInfo.dll" target="lib\MonoAndroid10\Plugin.DeviceInfo.dll" />
+     <file src="src\DeviceInfo.Plugin.Android\bin\Release\Plugin.DeviceInfo.xml" target="lib\MonoAndroid10\Plugin.DeviceInfo.xml" />
+     <file src="src\DeviceInfo.Plugin.Android\bin\Release\Plugin.DeviceInfo.pdb" target="lib\MonoAndroid10\Plugin.DeviceInfo.pdb" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\MonoAndroid10\Plugin.DeviceInfo.Abstractions.dll" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\MonoAndroid10\Plugin.DeviceInfo.Abstractions.xml" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\MonoAndroid10\Plugin.DeviceInfo.Abstractions.pdb" />
 
      <!--Xamarin.iOS-->
-     <file src="..\src\DeviceInfo.Plugin.iOS\bin\iPhone\Release\Plugin.DeviceInfo.dll" target="lib\MonoTouch10\Plugin.DeviceInfo.dll" />
-     <file src="..\src\DeviceInfo.Plugin.iOS\bin\iPhone\Release\Plugin.DeviceInfo.xml" target="lib\MonoTouch10\Plugin.DeviceInfo.xml" />
-     <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\MonoTouch10\Plugin.DeviceInfo.Abstractions.dll" />
-     <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\MonoTouch10\Plugin.DeviceInfo.Abstractions.xml" />
+     <file src="src\DeviceInfo.Plugin.iOS\bin\iPhone\Release\Plugin.DeviceInfo.dll" target="lib\MonoTouch10\Plugin.DeviceInfo.dll" />
+     <file src="src\DeviceInfo.Plugin.iOS\bin\iPhone\Release\Plugin.DeviceInfo.xml" target="lib\MonoTouch10\Plugin.DeviceInfo.xml" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\MonoTouch10\Plugin.DeviceInfo.Abstractions.dll" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\MonoTouch10\Plugin.DeviceInfo.Abstractions.xml" />
 
      <!--Xamarin.iOS Unified-->
-     <file src="..\src\DeviceInfo.Plugin.iOSUnified\bin\iPhone\Release\Plugin.DeviceInfo.dll" target="lib\Xamarin.iOS10\Plugin.DeviceInfo.dll" />
-     <file src="..\src\DeviceInfo.Plugin.iOSUnified\bin\iPhone\Release\Plugin.DeviceInfo.xml" target="lib\Xamarin.iOS10\Plugin.DeviceInfo.xml" />
-     <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\Xamarin.iOS10\Plugin.DeviceInfo.Abstractions.dll" />
-     <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\Xamarin.iOS10\Plugin.DeviceInfo.Abstractions.xml" />
+     <file src="src\DeviceInfo.Plugin.iOSUnified\bin\iPhone\Release\Plugin.DeviceInfo.dll" target="lib\Xamarin.iOS10\Plugin.DeviceInfo.dll" />
+     <file src="src\DeviceInfo.Plugin.iOSUnified\bin\iPhone\Release\Plugin.DeviceInfo.xml" target="lib\Xamarin.iOS10\Plugin.DeviceInfo.xml" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\Xamarin.iOS10\Plugin.DeviceInfo.Abstractions.dll" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\Xamarin.iOS10\Plugin.DeviceInfo.Abstractions.xml" />
        
        <!--UWP-->
-       <file src="..\src\DeviceInfo.Plugin.UWP\bin\Release\Plugin.DeviceInfo.dll" target="lib\UAP10\Plugin.DeviceInfo.dll" />
-       <file src="..\src\DeviceInfo.Plugin.UWP\bin\Release\Plugin.DeviceInfo.xml" target="lib\UAP10\Plugin.DeviceInfo.xml" />
-       <file src="..\src\DeviceInfo.Plugin.UWP\bin\Release\Plugin.DeviceInfo.pdb" target="lib\UAP10\Plugin.DeviceInfo.pdb" />
-       <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\UAP10\Plugin.DeviceInfo.Abstractions.dll" />
-       <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\UAP10\Plugin.DeviceInfo.Abstractions.xml" />
-       <file src="..\src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\UAP10\Plugin.DeviceInfo.Abstractions.pdb" />
+       <file src="src\DeviceInfo.Plugin.UWP\bin\Release\Plugin.DeviceInfo.dll" target="lib\UAP10\Plugin.DeviceInfo.dll" />
+       <file src="src\DeviceInfo.Plugin.UWP\bin\Release\Plugin.DeviceInfo.xml" target="lib\UAP10\Plugin.DeviceInfo.xml" />
+       <file src="src\DeviceInfo.Plugin.UWP\bin\Release\Plugin.DeviceInfo.pdb" target="lib\UAP10\Plugin.DeviceInfo.pdb" />
+       <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\UAP10\Plugin.DeviceInfo.Abstractions.dll" />
+       <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\UAP10\Plugin.DeviceInfo.Abstractions.xml" />
+       <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\UAP10\Plugin.DeviceInfo.Abstractions.pdb" />
 
 
 
