--- a/nuget/Plugin.nuspec
+++ b/nuget/Plugin.nuspec
@@ -26,7 +26,7 @@
        </dependencies>
    </metadata>
    <files>
-   <file src="ci\readme.txt" target="readme.txt" />
+   <file src="nuget\readme.txt" target="readme.txt" />
 <!--Core-->
      <file src="src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.dll" />
      <file src="src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.xml" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.xml" />
