Add Idiom & Fix UWP Version and add more platforms

--- a/src/DeviceInfo.Plugin.Abstractions/DeviceInfo.Plugin.Abstractions.csproj
+++ b/src/DeviceInfo.Plugin.Abstractions/DeviceInfo.Plugin.Abstractions.csproj
@@ -38,6 +38,7 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Idiom.cs" />
     <Compile Include="Platform.cs" />
     <Compile Include="IDeviceInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
