--- a/nuget/Plugin.nuspec
+++ b/nuget/Plugin.nuspec
@@ -14,26 +14,24 @@
          Receive information about the device that you are using. Properties such as Model, Operatin System, Version, Id, and even the ability to generate a unique Id for your application based off of these properties.
        </description>
      <releaseNotes>
-        [2.0.2]
-        Remove Plugins Readme and just show at install time.
-       [2.0.0]
-       -Breaking Change: New Namespace - Plugin.DeviceInfo
-       -Added UWP Support
      </releaseNotes>
        <summary>Get device information such as Model, OS, and other properties.</summary>
        <tags>xamarin, pcl, xam.pcl, settings, windows phone, winphone, wp8, winrt, android, xamarin.forms, ios</tags>
-       <dependencies>
-       </dependencies>
+     <dependencies>
+       <group targetFramework="MonoAndroid10">
+         <dependency id="Plugin.Permissions" version="1.1.7"/>
+       </group>
+     </dependencies>
    </metadata>
    <files>
    <file src="nuget\readme.txt" target="readme.txt" />
 <!--Core-->
-     <file src="src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.dll" />
-     <file src="src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.xml" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.xml" />
-     <file src="src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.pdb" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.pdb" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.Abstractions.dll" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.Abstractions.xml" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Plugin.DeviceInfo.Abstractions.pdb" />
+     <file src="src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.dll" target="lib\portable-net45+wp80+win8+wpa81\Plugin.DeviceInfo.dll" />
+     <file src="src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.xml" target="lib\portable-net45+wp80+win8+wpa81\Plugin.DeviceInfo.xml" />
+     <file src="src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.pdb" target="lib\portable-net45+wp80+win8+wpa81\Plugin.DeviceInfo.pdb" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\portable-net45+wp80+win8+wpa81\Plugin.DeviceInfo.Abstractions.dll" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\portable-net45+wp80+win8+wpa81\Plugin.DeviceInfo.Abstractions.xml" />
+     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\portable-net45+wp80+win8+wpa81\Plugin.DeviceInfo.Abstractions.pdb" />
 
 
      <!--Win Phone Silverlight-->
@@ -71,12 +69,7 @@
      <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\MonoAndroid10\Plugin.DeviceInfo.Abstractions.xml" />
      <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\MonoAndroid10\Plugin.DeviceInfo.Abstractions.pdb" />
 
-     <!--Xamarin.iOS-->
-     <file src="src\DeviceInfo.Plugin.iOS\bin\iPhone\Release\Plugin.DeviceInfo.dll" target="lib\MonoTouch10\Plugin.DeviceInfo.dll" />
-     <file src="src\DeviceInfo.Plugin.iOS\bin\iPhone\Release\Plugin.DeviceInfo.xml" target="lib\MonoTouch10\Plugin.DeviceInfo.xml" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\MonoTouch10\Plugin.DeviceInfo.Abstractions.dll" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\MonoTouch10\Plugin.DeviceInfo.Abstractions.xml" />
-
+ 
      <!--Xamarin.iOS Unified-->
      <file src="src\DeviceInfo.Plugin.iOSUnified\bin\iPhone\Release\Plugin.DeviceInfo.dll" target="lib\Xamarin.iOS10\Plugin.DeviceInfo.dll" />
      <file src="src\DeviceInfo.Plugin.iOSUnified\bin\iPhone\Release\Plugin.DeviceInfo.xml" target="lib\Xamarin.iOS10\Plugin.DeviceInfo.xml" />
