--- a/nuget/Plugin.nuspec
+++ b/nuget/Plugin.nuspec
@@ -19,7 +19,7 @@
        <tags>xamarin, pcl, xam.pcl, settings, windows phone, winphone, wp8, winrt, android, xamarin.forms, ios</tags>
      <dependencies>
        <group targetFramework="MonoAndroid10">
-         <dependency id="Plugin.Permissions" version="1.1.7"/>
+         <dependency id="Plugin.CurrentActivity" version="1.0.1"/>
        </group>
      </dependencies>
    </metadata>
