Add watchOS, tvOS, and macOS!

--- a/src/DeviceInfo.Plugin.Android/DeviceInfo.Plugin.Android.csproj
+++ b/src/DeviceInfo.Plugin.Android/DeviceInfo.Plugin.Android.csproj
@@ -17,6 +17,7 @@
     <AndroidUseLatestPlatformSdk>False</AndroidUseLatestPlatformSdk>
     <DevInstrumentationEnabled>True</DevInstrumentationEnabled>
     <TargetFrameworkVersion>v4.0.3</TargetFrameworkVersion>
+    <AndroidTlsProvider></AndroidTlsProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
