--- a/nuget/Plugin.nuspec
+++ b/nuget/Plugin.nuspec
@@ -26,63 +26,41 @@
    <files>
    <file src="nuget\readme.txt" target="readme.txt" />
 <!--Core-->
-     <file src="src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.dll" target="lib\portable-net45+wp80+win8+wpa81\Plugin.DeviceInfo.dll" />
-     <file src="src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.xml" target="lib\portable-net45+wp80+win8+wpa81\Plugin.DeviceInfo.xml" />
-     <file src="src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.pdb" target="lib\portable-net45+wp80+win8+wpa81\Plugin.DeviceInfo.pdb" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\portable-net45+wp80+win8+wpa81\Plugin.DeviceInfo.Abstractions.dll" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\portable-net45+wp80+win8+wpa81\Plugin.DeviceInfo.Abstractions.xml" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\portable-net45+wp80+win8+wpa81\Plugin.DeviceInfo.Abstractions.pdb" />
+     <file src="src\DeviceInfo.Plugin\bin\Release\Plugin.DeviceInfo.*" target="lib\portable-net45+wp80+win8+wpa81" />
 
 
      <!--Win Phone Silverlight-->
-     <file src="src\DeviceInfo.Plugin.WindowsPhone8\bin\Release\Plugin.DeviceInfo.dll" target="lib\wp8\Plugin.DeviceInfo.dll" />
-     <file src="src\DeviceInfo.Plugin.WindowsPhone8\bin\Release\Plugin.DeviceInfo.xml" target="lib\wp8\Plugin.DeviceInfo.xml" />
-     <file src="src\DeviceInfo.Plugin.WindowsPhone8\bin\Release\Plugin.DeviceInfo.pdb" target="lib\wp8\Plugin.DeviceInfo.pdb" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\wp8\Plugin.DeviceInfo.Abstractions.dll" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\wp8\Plugin.DeviceInfo.Abstractions.xml" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\wp8\Plugin.DeviceInfo.Abstractions.pdb" />
+     <file src="src\DeviceInfo.Plugin.WindowsPhone8\bin\Release\Plugin.DeviceInfo.*" target="lib\wp8" />
 
 
      <!--Win Phone 81-->
-     <file src="src\DeviceInfo.Plugin.WindowsPhone81\bin\Release\Plugin.DeviceInfo.dll" target="lib\wpa81\Plugin.DeviceInfo.dll" />
-     <file src="src\DeviceInfo.Plugin.WindowsPhone81\bin\Release\Plugin.DeviceInfo.xml" target="lib\wpa81\Plugin.DeviceInfo.xml" />
-     <file src="src\DeviceInfo.Plugin.WindowsPhone81\bin\Release\Plugin.DeviceInfo.pdb" target="lib\wpa81\Plugin.DeviceInfo.pdb" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\wpa81\Plugin.DeviceInfo.Abstractions.dll" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\wpa81\Plugin.DeviceInfo.Abstractions.xml" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\wpa81\Plugin.DeviceInfo.Abstractions.pdb" />
+     <file src="src\DeviceInfo.Plugin.WindowsPhone81\bin\Release\Plugin.DeviceInfo.*" target="lib\wpa81" />
 
 
      <!--WinStore-->
-     <file src="src\DeviceInfo.Plugin.WindowsStore\bin\Release\Plugin.DeviceInfo.dll" target="lib\win8\Plugin.DeviceInfo.dll" />
-     <file src="src\DeviceInfo.Plugin.WindowsStore\bin\Release\Plugin.DeviceInfo.xml" target="lib\win8\Plugin.DeviceInfo.xml" />
-     <file src="src\DeviceInfo.Plugin.WindowsStore\bin\Release\Plugin.DeviceInfo.pdb" target="lib\win8\Plugin.DeviceInfo.pdb" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\win8\Plugin.DeviceInfo.Abstractions.dll" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\win8\Plugin.DeviceInfo.Abstractions.xml" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\win8\Plugin.DeviceInfo.Abstractions.pdb" />
+     <file src="src\DeviceInfo.Plugin.WindowsStore\bin\Release\Plugin.DeviceInfo.*" target="lib\win8" />
 
 
      <!--Xamarin.Android-->
-     <file src="src\DeviceInfo.Plugin.Android\bin\Release\Plugin.DeviceInfo.dll" target="lib\MonoAndroid10\Plugin.DeviceInfo.dll" />
-     <file src="src\DeviceInfo.Plugin.Android\bin\Release\Plugin.DeviceInfo.xml" target="lib\MonoAndroid10\Plugin.DeviceInfo.xml" />
-     <file src="src\DeviceInfo.Plugin.Android\bin\Release\Plugin.DeviceInfo.pdb" target="lib\MonoAndroid10\Plugin.DeviceInfo.pdb" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\MonoAndroid10\Plugin.DeviceInfo.Abstractions.dll" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\MonoAndroid10\Plugin.DeviceInfo.Abstractions.xml" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\MonoAndroid10\Plugin.DeviceInfo.Abstractions.pdb" />
+     <file src="src\DeviceInfo.Plugin.Android\bin\Release\Plugin.DeviceInfo.*" target="lib\MonoAndroid10" />
 
  
      <!--Xamarin.iOS Unified-->
-     <file src="src\DeviceInfo.Plugin.iOSUnified\bin\iPhone\Release\Plugin.DeviceInfo.dll" target="lib\Xamarin.iOS10\Plugin.DeviceInfo.dll" />
-     <file src="src\DeviceInfo.Plugin.iOSUnified\bin\iPhone\Release\Plugin.DeviceInfo.xml" target="lib\Xamarin.iOS10\Plugin.DeviceInfo.xml" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\Xamarin.iOS10\Plugin.DeviceInfo.Abstractions.dll" />
-     <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\Xamarin.iOS10\Plugin.DeviceInfo.Abstractions.xml" />
+     <file src="src\DeviceInfo.Plugin.iOSUnified\bin\iPhone\Release\Plugin.DeviceInfo.*" target="lib\Xamarin.iOS10" />
+
+<!--watchos-->
+     <file src="src\DeviceInfo.Plugin.watchOS\bin\Release\Plugin.DeviceInfo.*" target="lib\XamarinWatchOS" />
+
+
+     <!--tvOS-->
+     <file src="src\DeviceInfo.Plugin.tvOS\bin\Release\Plugin.DeviceInfo.*" target="lib\XamarinTVOS" />
+
+
+     <!--macOS-->
+     <file src="src\DeviceInfo.Plugin.macOS\bin\Release\Plugin.DeviceInfo.*" target="lib\Xamarin.Mac20" />
        
        <!--UWP-->
-       <file src="src\DeviceInfo.Plugin.UWP\bin\Release\Plugin.DeviceInfo.dll" target="lib\UAP10\Plugin.DeviceInfo.dll" />
-       <file src="src\DeviceInfo.Plugin.UWP\bin\Release\Plugin.DeviceInfo.xml" target="lib\UAP10\Plugin.DeviceInfo.xml" />
-       <file src="src\DeviceInfo.Plugin.UWP\bin\Release\Plugin.DeviceInfo.pdb" target="lib\UAP10\Plugin.DeviceInfo.pdb" />
-       <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.dll" target="lib\UAP10\Plugin.DeviceInfo.Abstractions.dll" />
-       <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.xml" target="lib\UAP10\Plugin.DeviceInfo.Abstractions.xml" />
-       <file src="src\DeviceInfo.Plugin.Abstractions\bin\Release\Plugin.DeviceInfo.Abstractions.pdb" target="lib\UAP10\Plugin.DeviceInfo.Abstractions.pdb" />
+       <file src="src\DeviceInfo.Plugin.UWP\bin\Release\Plugin.DeviceInfo.*" target="lib\UAP10" />
 
 
 
