Added ref to dlls

--- a/samples/DeviceInfoSample/DeviceInfoSample/DeviceInfoSample.csproj
+++ b/samples/DeviceInfoSample/DeviceInfoSample/DeviceInfoSample.csproj
@@ -35,13 +35,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\..\..\src\DeviceInfo.Plugin\CrossDeviceInfo.cs">
-      <Link>CrossDeviceInfo.cs</Link>
-    </Compile>
     <Compile Include="App.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Plugin.DeviceInfo">
+      <HintPath>..\..\..\src\DeviceInfo.Plugin.macOS\bin\Debug\Plugin.DeviceInfo.dll</HintPath>
+    </Reference>
+    <Reference Include="Plugin.DeviceInfo.Abstractions">
+      <HintPath>..\..\..\src\DeviceInfo.Plugin.macOS\bin\Debug\Plugin.DeviceInfo.Abstractions.dll</HintPath>
+    </Reference>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xamarin.Forms.2.4.0.282\lib\portable-win+net45+wp80+win81+wpa81\Xamarin.Forms.Core.dll</HintPath>
     </Reference>
