--- a/samples/DeviceInfoSample/DeviceInfoSample/DeviceInfoSample.csproj
+++ b/samples/DeviceInfoSample/DeviceInfoSample/DeviceInfoSample.csproj
@@ -40,10 +40,12 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Plugin.DeviceInfo">
-      <HintPath>..\..\..\src\DeviceInfo.Plugin.macOS\bin\Debug\Plugin.DeviceInfo.dll</HintPath>
+      <HintPath>..\..\TestDLLs\Plugin.DeviceInfo.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Plugin.DeviceInfo.Abstractions">
-      <HintPath>..\..\..\src\DeviceInfo.Plugin.macOS\bin\Debug\Plugin.DeviceInfo.Abstractions.dll</HintPath>
+      <HintPath>..\..\TestDLLs\Plugin.DeviceInfo.Abstractions.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Xamarin.Forms.2.4.0.282\lib\portable-win+net45+wp80+win81+wpa81\Xamarin.Forms.Core.dll</HintPath>
