--- a/samples/DeviceInfoSample/DeviceInfoSampleMacOS/DeviceInfoSampleMacOS.csproj
+++ b/samples/DeviceInfoSample/DeviceInfoSampleMacOS/DeviceInfoSampleMacOS.csproj
@@ -58,6 +58,14 @@
     </XamMacArch>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Plugin.DeviceInfo">
+      <HintPath>..\..\TestDLLs\Plugin.DeviceInfo.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Plugin.DeviceInfo.Abstractions">
+      <HintPath>..\..\TestDLLs\Plugin.DeviceInfo.Abstractions.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.Mac" />
