--- a/src/DeviceInfo.Plugin/DeviceInfo.Plugin.csproj
+++ b/src/DeviceInfo.Plugin/DeviceInfo.Plugin.csproj
@@ -41,7 +41,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="..\..\nuget\readme.txt" Pack="true" />
+     <None Include="..\..\nuget\readme.txt" PackagePath="readme.txt" Pack="true" />
     <PackageReference Include="MSBuild.Sdk.Extras" Version="1.2.0" PrivateAssets="All" />
     <Compile Include="**\*.shared.cs" />
   </ItemGroup>
@@ -67,7 +67,7 @@
 
   <ItemGroup Condition=" $(TargetFramework.StartsWith('MonoAndroid')) ">
     <Compile Include="**\*.android.cs" />
-    <PackageReference Include="Plugin.CurrentActivity" Version="2.0.0.6-beta" />
+    <PackageReference Include="Plugin.CurrentActivity" Version="2.0.1.4" />
   </ItemGroup>
 
   <ItemGroup Condition=" $(TargetFramework.StartsWith('Xamarin.iOS')) ">
